--- a/db.bib
+++ b/db.bib
@@ -219,6 +219,32 @@ POS tags and dependency trees, improves the results further.},
  year = {2011}
 }
 
+@inproceedings{bentz-EtAl:2016:CL4LC,
+ abstract = {Language complexity is an intriguing phenomenon argued to play an important
+role in both language learning and processing. The need to compare languages
+with regard to their complexity resulted in a multitude of approaches and
+methods, ranging from accounts targeting specific structural features to global
+quantification of variation more generally. In this paper, we investigate the
+degree to which morphological complexity measures are mutually correlated in a
+sample of more than 500 languages of 101 language families. We use human expert
+judgements from the World Atlas of Language Structures (WALS), and compare them
+to four quantitative measures automatically calculated from language corpora.
+These consist of three previously defined corpus-derived measures, which are
+all monolingual, and one new measure based on automatic word-alignment across
+pairs of languages. We find strong correlations between all the measures,
+illustrating that both expert judgements and automated approaches converge to
+similar complexity ratings, and can be used interchangeably.},
+ address = {Osaka, Japan},
+ author = {Bentz, Christian  and  Ruzsics, Tatyana  and  Koplenig, Alexander  and  Samardzic, Tanja},
+ booktitle = {Proceedings of the Workshop on Computational Linguistics for Linguistic Complexity (CL4LC)},
+ month = {December},
+ pages = {142--153},
+ publisher = {The COLING 2016 Organizing Committee},
+ title = {A Comparison Between Morphological Complexity Measures: Typological Data vs. Language Corpora},
+ url = {http://aclweb.org/anthology/W16-4117},
+ year = {2016}
+}
+
 @inproceedings{berant-liang:2014:P14-1,
  address = {Baltimore, Maryland},
  author = {Berant, Jonathan  and  Liang, Percy},
