--- a/tinydb.bib
+++ b/tinydb.bib
@@ -137,6 +137,28 @@ POS tags and dependency trees, improves the results further.},
  year = {2011}
 }
 
+@inproceedings{bentz-EtAl:2016:CL4LC,
+ abstract = {Language complexity is an intriguing phenomenon argued to play an important
+role in both language learning and processing. The need to compare languages
+with regard to their complexity resulted in a multitude of approaches and
+methods, ranging from accounts targeting specific structural features to global
+quantification of variation more generally. In this paper, we investigate the
+degree to which morphological complexity measures are mutually correlated in a
+sample of more than 500 languages of 101 language families. We use human expert
+judgements from the World Atlas of Language Structures (WALS), and compare them
+to four quantitative measures automatically calculated from language corpora.
+These consist of three previously defined corpus-derived measures, which are
+all monolingual, and one new measure based on automatic word-alignment across
+pairs of languages. We find strong correlations between all the measures,
+illustrating that both expert judgements and automated approaches converge to
+similar complexity ratings, and can be used interchangeably.},
+ author = {Bentz, Christian  and  Ruzsics, Tatyana  and  Koplenig, Alexander  and  Samardzic, Tanja},
+ booktitle = {Proc. of the Workshop on Computational Linguistics for Linguistic Complexity (CL4LC)},
+ title = {A Comparison Between Morphological Complexity Measures: Typological Data vs. Language Corpora},
+ url = {http://aclweb.org/anthology/W16-4117},
+ year = {2016}
+}
+
 @inproceedings{bjorkelund-EtAl:2017:K17-3,
  abstract = {This paper presents the IMS contribution to the CoNLL 2017 Shared Task. In the
 preprocessing step we employed a CRF POS/morphological tagger and a neural
